...
                component={FileListScreen}
                options={{ title: '목록' }}
              />
              <Tab.Screen
                name={TAB_ROUTES.intro}
                component={DocumentIntroScreen}
                options={{ title: '소개' }}
              />
              <Tab.Screen
                name={TAB_ROUTES.reader}
                component={ReaderScreen}
                options={{ title: '리더' }}
              />
              <Tab.Screen
                name={TAB_ROUTES.options}
                component={SettingsScreen}
                options={{ title: '옵션' }}
              />
            </Tab.Navigator>
          </NavigationContainer>
        </ThemeProvider>
      </SafeAreaProvider>
    </GestureHandlerRootView>
...
